python-todo-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: python-todo-service
spec:
  serviceType: LoadBalancer
  selector:
    app: python-todo
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
