python-todo-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: python-todo
  namespace: secure-app
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: false
    nginx.ingress.kubernetes.io/tls-acme: "false"
spec:
  rules:
  - http:
        paths:
          - backend:
              serviceName: python-todo-service
              servicePort: 80
            path: /
          - backend:
              serviceName: python-todo-service
              servicePort: 80
            path: /new
  tls:
    secretName: tls-certificate
